--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9e4eb">  <td>20/07/11 17:14:04</td>   <td>0</td> <td title="&gt;&gt;TestBase.initialize()[pri:0, instance:testNG.FbLoginTest@11fc564b]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963815509</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/07/11 17:14:22</td>   <td>17839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbLoginTest.init()[pri:0, instance:testNG.FbLoginTest@11fc564b]">init</td> 
-  <td>main@963815509</td>   <td></td> </tr>
-<tr bgcolor="a9e4eb">  <td>20/07/11 17:14:23</td>   <td>19027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNG.FbLoginTest@11fc564b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@963815509</td>   <td></td> </tr>
+<tr bgcolor="7580b9">  <td>20/09/11 22:12:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NegativeTests.setUp(java.lang.String)[pri:0, instance:com.newTest.NegativeTests@3098cf3b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
+<tr bgcolor="7580b9">  <td>20/09/11 22:12:37</td>   <td>7488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeTests.negativeTest(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.newTest.NegativeTests@3098cf3b]">negativeTest</td> 
+  <td>main@1402433372</td>   <td></td> </tr>
+<tr bgcolor="7580b9">  <td>20/09/11 22:12:43</td>   <td>13879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NegativeTests.tearDown()[pri:0, instance:com.newTest.NegativeTests@3098cf3b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1402433372</td>   <td></td> </tr>
 </table>
